Add a custom FileSystemWharfResolver make WharfURLRepository handle files as well